# internal/controllers/shows.go
@@ -15,7 +15,7 @@ import (
 // @Tags shows
 // @Accept  json
 // @Produce  json
-// @Param prettyPrint string false "pretty print show" Format(bool)
+// @Param prettyPrint query string false "pretty print show" Format(bool)
 // @Success 200 {array} models.Show
 // @Failure 400 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
@@ -65,12 +65,12 @@ func (c *Controller) ListShows(ctx *gin.Context) {
 // @Accept json
 // @Produce json
 // @Param slug path string true "Show ID"
-// @Param prettyPrint string false "pretty print show" Format(bool)
+// @Param prettyPrint query string false "pretty print show" Format(bool)
 // @Success 200 {object} models.Show
 // @Failure 400 {object} ErrorResponse
 // @Failure 404 {object} ErrorResponse
 // @Failure 500 {object} ErrorResponse
-// @Router /show/{slug} [get]
+// @Router /shows/{slug} [get]
 func (c *Controller) ShowShow(ctx *gin.Context) {
 	slug := ctx.Param("slug")
 	prettyPrint := ctx.DefaultQuery("prettyPrint", "false")
